--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Date         : 2020-01-30 14:48:38
  * @LastEditors  : HaoJie
- * @LastEditTime : 2020-02-19 16:01:00
- * @FilePath     : /public/index.html
+ * @LastEditTime : 2020-03-20 17:00:35
+ * @FilePath     : \public\index.html
  -->
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -21,7 +21,9 @@
     <script src="https://open.ys7.com/sdk/js/1.4/ezuikit.js"></script>
 
     <!-- 挂载地图 -->
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=843c96184d7b9224cd7818219208e777"></script>
+    <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=843c96184d7b9224cd7818219208e777"></script> -->
+    <!-- 挂载地图，添加了修改圈圈的插件 -->
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=843c96184d7b9224cd7818219208e777&plugin=AMap.CircleEditor""></script>
     <!-- cdn导入 -->
     <!-- <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts-en.common.min.js"></script> -->
 
