完成定位打卡不规则图形，人员信息联动

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Date         : 2020-01-30 14:48:38
  * @LastEditors  : HaoJie
- * @LastEditTime : 2020-03-30 19:31:14
+ * @LastEditTime : 2020-04-19 22:43:24
  * @FilePath     : \public\index.html
  -->
 <!DOCTYPE html>
@@ -23,7 +23,7 @@
     <!-- 挂载地图 -->
     <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=843c96184d7b9224cd7818219208e777"></script> -->
     <!-- 挂载地图，添加了修改圈圈的插件 -->
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=843c96184d7b9224cd7818219208e777&plugin=AMap.CircleEditor""></script>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=843c96184d7b9224cd7818219208e777&plugin=AMap.CircleEditor,AMap.PolyEditor"></script>
     <!-- cdn导入 -->
     <!-- <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts-en.common.min.js"></script> -->
 
